   vim-localvimrc plugin).
 - Default o.Class, o.Trait, and o.Attribute constructor arguments to
   an empty object (o.Type was already doing this).
 Traits:
 - Recursively set child trait attribute arguments when calling setFromArgs.
   This means that when making a class instance that arguments for child
   trait attributes will now be applied as they should have been.

0.0.10 : 2014-03-09
 Global:
 - Use Grunt for build tools.
 - Lots of reworking of the build tools - much less room for human error.
 - Created an Object.getPrototypeOf() shim which calls __proto__ if not
   available in order to support older browsers.  This is available as the
   plumbing function o.getPrototypeOf().

0.0.9 : 2014-02-04
 Global:
 - Migrated everything to CommonJS format modules (no more hacks for the
   web, those will be handled independently).
 - Better error messaging across the board (no more "..." errors).
 - Lots of adjustments to reduce the minified size by several kilobytes.
 - Created several utilities in the bin directory for creating combined
   and minified versions of o.js.
 - Combined o.js and minified o-min.js are now shipped within the o-js
   repository.
 Classes:
 - Renamed o.Constructor to o.Class, because that is what it is and it is
   less to type.
 Traits:
 - Added requires attribute to o.Trait so that traits can declare a
   base-line interface that they require to be installed onto an
   object.
 Types:
 - Added o.simpleObjectType for checking if an object's constructor is Object.
 - Added o.typeType, o.attributeType, o.traitType, and o.classType for validating
   and coercing o.js's built-in object types.
 - ArrayOfType and ObjectOfType now apply their inner type's coercions.
 - Greatly simplify the trait type.
 - InstanceOfType declares a coercion that will create a new instance using
   the value as arguments to the constructor.
 - Added o.positiveIntType due to this type being a common case.
 Plumbing:
 - Exposed o.ucFirst to the public.
