@@ -1,6 +1,6 @@
 var o_AnyType = require('./o-AnyType.js');
 var o_booleanType = require('./o-booleanType.js');
-var o_nonEmptyStringType = require('./o-nonEmptyStringType.js');
+var o_identifierType = require('./o-identifierType.js');
 var o_nullType = require('./o-nullType.js');
 var o_definedType = require('./o-definedType.js');
 var o_ucFirst = require('./o-ucFirst.js');
@@ -17,28 +17,28 @@ var o_accessor = require('./o-accessor.js');
 var o_predicate = require('./o-predicate.js');
 var o_clearer = require('./o-clearer.js');
 
-var booleanOrNonEmptyStringType = new o_AnyType([
+var booleanOrIdentifierType = new o_AnyType([
     o_booleanType,
-    o_nonEmptyStringType
+    o_identifierType
 ]);
 
 var attrAttrs = {
     key: {
-        type: o_nonEmptyStringType,
+        type: o_identifierType,
         required: true
     },
     argKey: {
-        type: new o_AnyType([ o_nonEmptyStringType, o_nullType ]),
+        type: new o_AnyType([ o_identifierType, o_nullType ]),
         devoid: function () { return this.key(); }
     },
     valueKey: {
-        type: o_nonEmptyStringType,
+        type: o_identifierType,
         devoid: function () { return '_' + this.key(); }
     },
 
     devoid: { type: o_definedType },
     builder: {
-        type: booleanOrNonEmptyStringType,
+        type: booleanOrIdentifierType,
         devoid: false,
         filter: function (val) { if (val === true) val = 'build' + o_ucFirst( this.key() ); return val; }
     },
@@ -56,26 +56,26 @@ var attrAttrs = {
     chain: { type: o_booleanType, devoid: false },
 
     reader: {
-        type: booleanOrNonEmptyStringType,
+        type: booleanOrIdentifierType,
         devoid: true,
         filter: function (val) { if (val === true) val = this.key(); return val; }
     },
     writer: {
-        type: booleanOrNonEmptyStringType,
+        type: booleanOrIdentifierType,
         devoid: false,
         filter: function (val) { if (val === true) val = this.key(); return val; }
     },
     predicate: {
-        type: booleanOrNonEmptyStringType,
+        type: booleanOrIdentifierType,
         devoid: false,
         filter: function (val) { if (val === true) val = 'has' + o_ucFirst( this.key() ); return val; }
     },
     clearer: {
-        type: booleanOrNonEmptyStringType,
+        type: booleanOrIdentifierType,
         devoid: false,
         filter: function (val) { if (val === true) val = 'clear' + o_ucFirst( this.key() ); return val; }
     },
-    proxies: { type: new o_ObjectOfType( o_nonEmptyStringType ) }
+    proxies: { type: new o_ObjectOfType( o_identifierType ) }
 };
 
 var attrWriters = {};
