@@ -1,0 +1,3 @@
+var o_PatternType = require('./o-PatternType.js');
+
+module.exports = new o_PatternType(/^[A-Za-z_$][A-Za-z_$0-9]*$/);
