@@ -27,6 +27,7 @@ module.exports = {
     dateType:           require('./o-dateType.js'),
     definedType:        require('./o-definedType.js'),
     functionType:       require('./o-functionType.js'),
+    identifierType:     require('./o-identifierType.js'),
     integerType:        require('./o-integerType.js'),
     negativeType:       require('./o-negativeType.js'),
     nonEmptyStringType: require('./o-nonEmptyStringType.js'),
